# surfy

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
docs/: 0-initial-plan.md  1-phase-1-plan.md
domain/models/: result.py
scripts/: test_phase1.py
surfy/: graph.py  state.py
surfy/adapters/browser/: __init__.py  browser_use_adapter.py  test_browser.py
surfy/adapters/browser/test/: decode_screenshot.py
surfy/domain/models/: __init__.py  action.py  plan.py  result.py  screen.py
surfy/domain/ports/: __init__.py  browser.py  llm.py
surfy/models/: __init__.py  enums.py  execution.py  macro.py  micro.py  review.py  screen.py
surfy/nodes/: __init__.py  cdp_executor.py  human_gateway.py  macro_planner.py  micro_planner.py  reviewer.py
surfy/scripts/: test_phase1.py
tests/: test_models.py  test_phase1_integration.py
