[project]
name = "surfy"
version = "0.1.0"
description = "Hierarchical browser automation agent with Plan Anchor"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.8",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "browser-use>=0.11,<1.0",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
